# tyre-reader

./: .gitignore  CMakeLists.txt  README.md  tire_combo_geometry.py
dataset_example/: expected.csv
gui/: BackendClient.cpp  BackendClient.h  MainWindow.cpp  MainWindow.h  main_qt.cpp
include/: DatasetBenchmark.h  DatasetImagePreprocessor.h  ImagePreprocessor.h  TesseractOcrEngine.h  Types.h  TyreAnalyzer.h
scripts/: assistant_full_batch.py  compare_ocr_engines.py  detect_yolo_rois.py  export_yolo_onnx.py  ocr_from_rois.py  predict_roi_yolo.py  prepare_roi_yolo_dataset.py  run_full_batch_pipeline.sh  run_program_batch.py  run_roi_train_wsl.sh  train_roi_detector.py
src/: DatasetBenchmark.cpp  DatasetImagePreprocessor.cpp  ImagePreprocessor.cpp  TesseractOcrEngine.cpp  TyreAnalyzer.cpp  dataset_prep_main.cpp  main.cpp
